--- a/css/news.css
+++ b/css/news.css
@@ -101,6 +101,55 @@
   object-fit: cover;
 }
 
+.news_single__content_wrapper {
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+}
+
+.news_single__content_wrapper-img_wrapper {
+  width: 50%;
+}
+
+.news_single__content_wrapper-content {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  word-break: break-all;
+  white-space: normal;
+}
+
+.news_single {
+  padding-top: 40px;
+}
+
+.news_single__content_wrapper-content p:nth-child(1) {
+  color: var(--color-warm-black);
+  font-size: 32px;
+  font-weight: 400;
+}
+
+.news_single__content_wrapper-content p:nth-child(2) {
+  color: var(--color-warm-black);
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.news_single__content_wrapper-content p:nth-child(3) {
+  color: var(--color-warm-black);
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.news_single__header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 5px;
+  padding: 40px 0 40px 0;
+}
+
 @media screen and (min-width: 700px) {
   .news__title,
   .home-page-news {
@@ -138,6 +187,18 @@
     height: 296px;
     width: auto;
   }
+
+  .news_single__content_wrapper-content p:nth-child(1) {
+    font-size: 24px;
+  }
+
+  .news_single__content_wrapper-content p:nth-child(2) {
+    font-size: 16px;
+  }
+
+  .news_single__content_wrapper-content p:nth-child(3) {
+    font-size: 16px;
+  }
 }
 @media screen and (min-width: 1000px) {
   .thumbnail_content p:nth-child(2) {
@@ -165,5 +226,17 @@
 
   .read-more-news img {
     padding-bottom: 9px;
+  }
+
+  .news_single__content_wrapper-content p:nth-child(1) {
+    font-size: 32px;
+  }
+
+  .news_single__content_wrapper-content p:nth-child(2) {
+    font-size: 18px;
+  }
+
+  .news_single__content_wrapper-content p:nth-child(3) {
+    font-size: 18px;
   }
 }
